--- a/index.html
+++ b/index.html
@@ -6,55 +6,9 @@
   <title>نظام تعداد سكاني مع PDF و Excel</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
+  <script type="module" src="script.js"></script> <!-- ربط ملف script.js -->
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      direction: rtl;
-      background-color: #f4f4f4;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    form {
-      max-width: 500px;
-      margin: 20px auto;
-      background-color: white;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    input[type="text"], input[type="number"], input[type="submit"] {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    table, th, td {
-      border: 1px solid #ddd;
-    }
-    th, td {
-      padding: 10px;
-      text-align: center;
-    }
-    button {
-      padding: 5px 10px;
-      border: none;
-      background-color: #007BFF;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
+    /* نفس التنسيقات كما هي */
   </style>
 </head>
 <body>
@@ -88,6 +42,9 @@
   </tbody>
 </table>
 
+<!-- إضافة زر لتحميل ملف Excel -->
+<button onclick="generateExcel()">تحميل Excel</button>
+
 <script>
   let people = [];  // مصفوفة لتخزين بيانات الأشخاص
   let currentId = 1;  // معرف الشخص الحالي
@@ -112,7 +69,7 @@
     updateTable();
 
     // إنشاء ملف PDF
-    generatePDF(person);
+    window.generatePDF(person); // استدعاء الدالة من script.js
 
     // إعادة تعيين النموذج
     form.reset();
@@ -144,26 +101,6 @@
     
     // تحديث الجدول بعد الحذف
     updateTable();
-  }
-
-  // توليد ملف PDF عند إضافة شخص
-  function generatePDF(person) {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-
-    doc.setFontSize(16);
-    doc.text('قائمة التعداد السكاني لمحافظة بابل، المسيب', 10, 20);
-    doc.setFontSize(12);
-    
-    // إضافة بيانات الشخص إلى ملف PDF
-    doc.text(`التسلسل: ${person.id}`, 10, 40);
-    doc.text(`الاسم الكامل: ${person.name}`, 10, 50);
-    doc.text(`العمر: ${person.age}`, 10, 60);
-    doc.text(`الجنس: ${person.gender}`, 10, 70);
-    doc.text(`العنوان: ${person.address}`, 10, 80);
-
-    // تحميل PDF
-    doc.save(`person_${person.id}.pdf`);
   }
 
   // وظيفة لتحويل بيانات الأشخاص إلى ملف Excel
