--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-<h1>نظام تعداد سكاني - محافظة بابل، المسيب</h1>
+<h1>نظام تعداد سكاني - محافظة (  )</h1>
 
 <!-- نموذج إضافة شخص جديد -->
 <form id="personForm">
